<resources>
    <string name="app_name">TugasAkhirBaru</string>
    <string name="searching">Searching</string>
    <string name="DummyNamaMakanan">Ini adalah Ayam Barbeque</string>
    <string name="HargaMakanan">RP 20.000</string>
    <string name="recommendation">Recommendation</string>
    <string name="DummyDetailMakanan">Ricebox ini merupakan makanan kekinian anak milenial dengan rasa BBQ</string>
    <string name="textKomposisi">Komposisi :</string>
    <string name="DummyKomposisi">Nasi, Daging Ayam BBQ, Telur, Selada</string>
    <string name="edit">Edit</string>
    <string name="kandunganNutrisi">Kandungan Calorie Setiap Item :</string>
    <string name="DummyNutrisi_makanan">Nasi</string>
    <string name="DummyNutrisi_nutrisi">330 Kkal</string>
    <string name="EditKomposisiPage">Kustomisasi Makanan</string>
    <string name="DummyKontenKomposisi1">Nasi</string>
    <string name="DummyKontenKomposisi2">Ayam</string>
    <string name="TambahKeKeranjang">Tambah ke Keranjang</string>
    <string name="numberCount">1</string>
    <string name="Keranjang">Keranjang</string>
    <string name="custom">Custom : Daging, Telur, Selada</string>
    <string name="beli">Beli</string>
    <string name="checkout">Checkout</string>
    <string name="tambah">Tambah</string>
    <string name="alamat">Alamat :</string>
    <string name="DummyAlamatBaru">Jalan Penuh Kenangan</string>
    <string name="Total">Total</string>
    <string name="bayar">Bayar</string>
    <string name="login">Login</string>
    <string name="message_login_page">Login Sekarang!</string>
    <string name="error_empty_email">Invalid Email </string>
    <string name="message_registration_page">Isi datamu dibawah ini</string>
    <string name="username">Username</string>
    <string name="passsword">Password</string>
    <string name="email">Email</string>
    <string name="forgetPassword">Forget Password?</string>
    <string name="DummyNamaAccount">Fahmi Pradana</string>
    <string name="DummyEmail">fahmites@gmail.com</string>
    <string name="phonenumber">Nomor Telepone :</string>
    <string name="Dummyphonenumber">0811-4200-6901</string>
    <string name="editProfile">EDIT PROFILE</string>
    <string name="RegistText">Don\'t have an account yet? let\'s register</string>
    <string name="AlamatError">Alamat tidak tersedia!</string>
    <string name="pesanan">Pesanan</string>
    <string name="tambahkanMenu">Tambahkan Menu</string>
    <string name="menuyangterjual">Menu yang Terjual</string>
    <string name="length_character">Password harus memiliki setidaknya 6 karakter</string>
    <string name="usernamenEmail">Email</string>
    <string name="menuBar">menuBar</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="Kkal">1400 Kkal</string>
    <string name="hapus">Hapus</string>
    <string name="DummyHarga">Rp 1.230.000</string>
    <string name="Oreder">Oreder LIst</string>
    <string name="status">Prepared</string>
    <string name="timestamp">10::00 32 January 2001</string>
    <string name="price">Rp 20000</string>
    <string name="tvNutrisi">Kandungan Nutrisi :</string>
    <string name="transactionSuccess">Pesanan anda berhasil</string>
    <string name="LowCarbo">Low Carbohydrate</string>
    <string name="LowCalorie">Low Calorie</string>
    <string name="menu">Menu</string>
    <string name="timestamp2">12.00</string>
    <string name="calorie">Calorie : 234 kkal</string>
    <string name="fat">Fat : 12</string>
    <string name="protein">Protein : 100</string>
    <string name="purchase">Purchase History</string>
    <string name="kalori">Calorie : </string>
    <string name="tvprotein">Protein : </string>
    <string name="karbo">Carbohidrat : </string>
    <string name="tvfat">Fat :</string>
    <string name="error_empty_data">Anda Belum Memasukkan Menu !</string>
    <string name="carbo">Carbo : 200 g</string>
    <string name="tvCalorie">Calories : </string>
    <string name="tvProtein">Protein : </string>
    <string name="tvFat">Fat : </string>
    <string name="tvCarbo">Carbohydrate : </string>
    <string name="DetailPesanan">Detail Pesanan</string>
    <string name="DetailIngredient">Detail Ingredient :</string>
    <string name="quantity">10</string>
    <string name="prepared">Prepared</string>
    <string name="progress">Progress</string>
    <string name="done">Done</string>
    <string name="Username">Username :</string>
    <string name="lengkapiData">Lengkapi Data Anda Terlebih Dahulu</string>
    <string name="Menu">Menu :</string>
    <string name="historiPurchase">History Purchase</string>
    <string name="historiTransaction">History Transaction</string>
    <string name="uploadBukti">Upload Bukti Pembayaran</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="confirmPayment">Confirm Payment</string>
    <string name="Pending">Pending</string>
    <string name="statusPembayaran">Status Pembayaran :</string>
    <string name="imageSelected">Image Selected</string>
    <string name="successfullyUploaded">Successfully Uploaded</string>
    <string name="failedUploaded">Failed Upload</string>
    <string name="emptyFile">Upload File First</string>
    <string name="failedFetchingFile">Failed to Retrieve the Image</string>
    <string name="name">Name</string>

    <string-array name="filter_makanan">
        <item>A-Z</item>
        <item>Z-A</item>

        <item>Low Calorie</item>
        <item>High Calorie</item>
        <!--        <item>Low Carbo</item>-->
        <!--        <item>High Carbo</item>-->
        <!--        -->
        <!--        <item>Low Protein</item>-->
        <!--        <item>High Protein</item>-->
    </string-array>

    <string-array name="status_transaction">
        <item>-- Pilih Status --</item>
        <item>Prepared</item>
        <item>OnProgress</item>
        <item>Done</item>
        <item>Cancel</item>
    </string-array>

    <string-array name="status_pembayaran">
        <item>-- Pilih Status --</item>
        <item>Pending</item>
        <item>Done</item>
        <item>Cancel</item>
    </string-array>
</resources>