<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="item"
            type="com.example.tugasakhirbaru.model.Menu" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.EditProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="411dp"
        android:layout_height="54dp"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_width="100dp"
            android:layout_height="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView"
            app:srcCompat="@drawable/logo_ricebox" />
    </androidx.appcompat.widget.Toolbar>
<ScrollView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintTop_toBottomOf="@id/toolbar"
    app:layout_constraintStart_toStartOf="parent">

    <TextView
        android:id="@+id/tvEditKomposisiPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EditKomposisiPage"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"/>
    <ImageView
        android:id="@+id/ivDetailMakanan"
        android:layout_width="307dp"
        android:layout_height="217dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEditKomposisiPage"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tvJudulMakanan"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:maxLines="2"
        android:text="@string/DummyNamaMakanan"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivDetailMakanan" />

    <TextView
        android:id="@+id/tvHargaMakanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:shadowColor="@color/black"
        android:shadowRadius="2"
        android:text="@string/HargaMakanan"
        android:textColor="@color/yellow"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvJudulMakanan" />

    <TextView
        android:id="@+id/tvDescDetailMakanan"
        android:layout_width="353dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/DummyDetailMakanan"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvHargaMakanan" />

    <TextView
        android:id="@+id/tvKomposisi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textKomposisi"
        android:layout_marginStart="30dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDescDetailMakanan"/>

    <LinearLayout
        android:id="@+id/LLKomposisi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/tvKomposisi"
        app:layout_constraintStart_toStartOf="parent">

        <CheckBox
            android:id="@+id/checkBox1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/DummyKontenKomposisi1" />
            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/DummyKontenKomposisi2" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvKandunganNutrisi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/kandunganNutrisi"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LLKomposisi" />

    <TextView
        android:id="@+id/tvKontenKandungan_makanan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:textStyle="bold"
        android:text="@string/DummyNutrisi_makanan"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvKandunganNutrisi" />

    <TextView
        android:id="@+id/tvKontenKandungan_nutrisi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/DummyNutrisi_nutrisi"
        android:textStyle="bold"
        android:layout_marginEnd="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvKandunganNutrisi" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        app:layout_constraintTop_toBottomOf="@id/tvJudulMakanan">
        <Button
            android:id="@+id/minesCountMenu"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="-"
            android:layout_marginEnd="10dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"/>
        <TextView
            android:id="@+id/numberCountDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/numberCount"
            android:textSize="20sp"/>
        <Button
            android:id="@+id/addCountMenu"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:text="+"
            android:textColor="@color/black"
            />
    </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/btnTambahKeranjang"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/TambahKeKeranjang"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/lessroundedsquare"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>