<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="item"
            type="com.example.tugasakhirbaru.model.TransactionMenu" />
    </data>
    <androidx.cardview.widget.CardView
        android:id="@+id/cardMenuBought"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:cardElevation="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_margin="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCheckout">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_gravity="end"
                    android:text="@{item.date}"
                    tools:text="@string/timestamp2"/>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/LLMenuKeranjang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvUser"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:shadowColor="@color/black"
                        android:shadowRadius="2"
                        android:text="Ayam Bakar, Steak Krispi"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:id="@+id/tvOrder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text=""
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        android:textStyle="bold"
                        tools:text="@string/price" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="1"
                        android:orientation="horizontal"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/fat"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/black"
                        android:textSize="18sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/calorie"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/black"
                        android:textSize="18sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/protein"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/black"
                        android:textSize="18sp" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        tools:text="@string/carbo"
                        android:textColor="@color/black"
                        android:textColorHighlight="@color/black"
                        android:textSize="18sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/numberCountDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginEnd="10dp"
                        android:text="@{item.quantityToString}"
                        android:textSize="30sp"
                        tools:text="@string/numberCount" />

                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>